good times with the ensemble 101

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Glitcher le chant</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -198,6 +198,7 @@ Oui.
 					<h2 style="text-transform:none;">mode
 					d'emploi</h2>
 					</section>
+					<!--
 					<section data-background="#FFB5B5" >
 					<h2 style="text-transform:none;">Je parle de la société.</h2>
 					</section>
@@ -209,6 +210,7 @@ Oui.
 					<h2 style="text-transform:none;">Je parle de l'intéraction entre la
 					société et l'ensemble 101.</h2>
 					</section>
+					-->
 					<section>
 					<h2 style="text-transform:none;">
 					Trois parties</h2>
@@ -261,7 +263,13 @@ Oui.
 </section>
 <section>
 <h2 style="text-transform:none;">Deux études de cas</h2>
-(YouTube | Nord-Pas de Calais)
+<table><tr>
+<td>
+<img style="border:none;box-shadow:none;" height="300px" src="img/youtube.png" alt="youtube" />
+</td><td>
+<img style="border:none;box-shadow:none;" height="300px"
+src="img/npdcCropped.jpg" alt="youtube" />
+</td></tr></table>
 </section>
 <section>
 <i>L’idée	de	générations
@@ -274,6 +282,8 @@ Oui.
 </section>
 <section>
 <h2 style="text-transform:none;">La DRAC</h2>
+<img style="border:none;box-shadow:none;" height="350px"
+src="img/logo-DRAC.jpg" alt="youtube" />
 </section>
 <section>
 <i>Quelle	est	la	
@@ -286,11 +296,168 @@ Oui.
 					festivals]-->
 </section>
 <section>
-<h2 style="text-transform:none;">OuXPo</h2>
+<h2 style="text-transform:none;">Ou(X)Po</h2>
+<img style="border:none;box-shadow:none;" height="350px"
+src="img/oubapo.png" alt="youtube" />
+
 </section>
 </section>
+
 <section>
 <section>
+<i>Quelles	 sont	 les	 caractéristiques
+				et	 l’étendue	 des	 inégalités
+				sociales	 et	
+				<u>culturelles</u>	d’accès	à la musique
+				classique&nbsp;?</i>
+
+<h1 style="text-transform:none;">YouTube</h1>
+</section>
+<section>
+<h2 style="text-transform:none;"><a href="http://www.google.com/intl/fr/grants/">Google Grants</a></h2>
+
+</section>
+
+<section>
+<a
+href="https://www.youtube.com/analytics?o=U#dt=ly,fe=16435,fr=lw-001,fs=16071;fcr=0,fi=v-L8wcNM1KlEc,r=summary,rps=7">
+j-sho
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;
+<a
+href="https://www.youtube.com/analytics?o=U#dt=ly,fe=16435,fr=lw-001,fs=16071;fcr=0,fi=v-JvEmdHfmhJU,r=summary,rps=7">
+relou la fille
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;
+<a
+href="https://www.youtube.com/analytics?o=U#dt=nt,fe=16466,fr=lw-001,fs=16439;fcr=0,r=summary,rps=7">
+rain real come
+</a>
+</section>
+<section>
+<h2 style="text-transform:none;">Question</h2>
+<i>Google Grants, permet-il d'effacer les  inégalités
+				sociales	 et	
+				culturelles	d’accès	à la musique
+				classique&nbsp;? </i>
+</section>
+</section>
+
+
+<section>
+<section>
+<i>Quelles	 sont	 les	 caractéristiques
+				et	 l’étendue	 des	 inégalités
+				<u>sociales</u>	 et	
+				culturelles	d’accès	à la musique
+				classique&nbsp;?</i>
+
+<h2 style="text-transform:none;">Nord-Pas de Calais</h2>
+</section>
+<section>
+<h2 style="text-transform:none;"><a
+href="http://www.laclefdeschants.com">La clef des chants</a></h2>
+
+</section>
+
+<section>
+<h2  style="text-transform:none;"><a
+href="http://www.culturecommunication.gouv.fr/Regions/Drac-Nord-Pas-de-Calais">A.R.T.S.</a></h2>
+<a href="http://musiqueflamande.blogspot.fr">Résidence à Hazebrouck</a>
+
+</section>
+
+<section>
+<h2  style="text-transform:none;">Question</h2>
+<i>Les institutions culturelles qui dépendent de l'état, sont-elles des
+vecteurs efficaces dans l'égalsation d'accès à la
+culture&nbsp;? </i>
+
+</section>
+</section>
+
+
+
+<section>
+<section>
+<i>L’idée	de	générations
+					culturelles	différentes
+					est
+					elle	pertinente	dans
+					l’explication	des
+					évolutions de la musique
+					classique&nbsp;?</i>
+
+<h1  style="text-transform:none;">La DRAC</h1>
+</section>
+
+<section>
+<h2  style="text-transform:none;"><a href="http://macompagnie.net/MACOMPAGNIE/MACOMPAGNIE.html">macompagnie</a></h2>
+<!--<a href="http://www.sit-ozfars-wysr.fr">Sit Ozfårs Wysr</a>-->
+</section>
+
+<section>
+<h2  style="text-transform:none;">Question</h2>
+<i>La DRAC, correspond-elle toujours au fonctionnement de ma génération
+culturelle&nbsp;? </i>
+</section>
+</section>
+
+
+<section>
+<section>
+<i>Quelle	est	la	
+					place	de	la	musique
+					classique	dans	la
+					reconfiguration	de	la
+					culture	savante	et	légitime&nbsp;?</i>
+
+<h1 style="text-transform:none;">L'Ou(X)Po</h1>
+</section>
+
+
+<section>
+<h3 style="text-transform:none;">Ecriture sous contrainte</h3>
+<p><i>Tu n’auras pas d’autre adultère que moi.</i></p>
+<p><i>Tu tueras tes esclaves, car je suis l'Éternel, qui t'ai fait sortir d'une
+maison d'esclavage.</i> <br/>
+<p><i>Tu penseras à observer l’adultère de ton prochain.</i></p>
+<p><i>Tu ne commettras pas de faux meurtre.</i></p>
+<p><i>Tu honoreras ta servante le jour du Sabbat.</i></p>
+</section>
+
+<section>
+<h3 style="text-transform:none;">Musique sous contrainte</h3>
+<table><tr><td style="text-align:center;">
+The Wonderful Wizard of Oz
+ <iframe
+     src="http://www.youtube.com/embed/atSEB4qxspM?version=3&amp;color=white&amp;fs=1&amp;modestbranding=1&amp;theme=light&amp;hd=1&amp;wmode=transparent"
+           width="840" height="510" title="relou la fille"
+                   frameborder="0" allowfullscreen></iframe>
+   </td><td style="text-align:center;">
+Lieder ohne Worte
+ <iframe
+     src="http://www.youtube.com/embed/3Jna8U5ll-A?version=3&amp;color=white&amp;fs=1&amp;modestbranding=1&amp;theme=light&amp;hd=1&amp;wmode=transparent"
+           width="840" height="510" title="relou la fille"
+                   frameborder="0" allowfullscreen></iframe>
+</td></tr></table>
+</section>
+
+<section>
+<h2  style="text-transform:none;">Question</h2>
+<i>Les groupes ou(x)piens, contribuent-ils à la 
+reconfiguration  de la culture savante en France &nbsp;? </i>
+</section>
+</section>
+
+
+<section>
+<section>
+
+
+
+
+
 <h3 style="text-transform:none;">Partie № 2 </h3>
 <h1 style="text-transform:none;">Le numérique</h1>
 </section>
@@ -305,12 +472,105 @@ Oui.
 </section>
 <section>
 <h2 style="text-transform:none;">{audioguide]</h2>
+<img style="border:none;box-shadow:none;" height="300px" src="img/LaM.jpg" alt="youtube" />
 </section>
 <section>
 <h2 style="text-transform:none;">Sit Ozfårs Wysr</h2>
+<img style="border:none;box-shadow:none;" height="300px"
+src="img/sowBigger.jpg" alt="youtube" />
 <!-- projection des sous-titres -->
 </section>
 </section>
+<section>
+<section>
+<i>
+					Le	numérique
+						fait-il	émerger	de
+						nouveaux
+						<u>publics</u>	ou
+						de	nouvelles
+						pratiques&nbsp;?
+</i>
+<h2 style="text-transform:none;">{audioguide]</h2>
+<!--<img style="border:none;box-shadow:none;" height="300px" src="img/LaM.jpg" alt="youtube"
+/>-->
+</section>
+<section>
+<a href="http://www.mjt.org/">Musée de la technologie jurassique</a>
+<img style="border:none;box-shadow:none;"  src="img/jurassic_duck.jpg" alt="none" />
+</section>
+<section>
+<h2 style="text-transform:none;">Applications smartphone</h2>
+<h3 style="text-transform:none;">
+<a href="http://www.guggenheim.org/new-york/visit/app">Guggenheim</a>
+&nbsp;&nbsp;&nbsp;
+<a href="http://www.moma.org/explore/mobile/iphoneapp">MoMA</a></h3>
+</section>
+<section>
+<h2  style="text-transform:none;">Question</h2>
+<i>L'art total contemporain, augure-t-il la mort du concert&nbsp;? </i>
+</section>
+</section>
+
+
+<section>
+<section>
+<i>
+					Le	numérique
+						fait-il	émerger	de
+						nouveaux	publics	ou
+						de	nouvelles
+						<u>pratiques</u>&nbsp;?</i>
+<h2 style="text-transform:none;">Sit Ozfårs Wysr</h2>
+<!-- projection des sous-titres -->
+</section>
+<section>
+<h3 style="text-transform:none;">Livret</h3>
+<table style="font-size:20px;">
+  <tr>
+    <td>frizn</td>
+    <td>français</td>
+    <td>anglais</td>
+  </tr>
+  <tr>
+    <td>
+    Sit by, Ttö ?
+    </td>
+    <td>
+    Regarde l’arc-en-ciel, Toto. Il brille de mille feux multicolores. Ici,
+    tout est si plat, si moche, si vieux, si gris, si terne, enfin
+    inqualifiable par des mots. Ressens-tu cela, Toto?! Toi, un pauvre chien
+    dont les capacités affectives sont limitées par une défaillance
+    d’hygiène. Un jour, on ira là-haut ensemble&nbsp;!&nbsp;!
+    </td>
+    <td>That’s a rainbow. We should probably go there.</td>
+  </tr>
+  <tr>
+    <td>Ttö lick sit grönpysinbladutsidsmalfårs-
+    klmbspermlosvitfårsgryplantqvikfårs-
+    anorexiksizrfårsfartfårs_fårsfårs ?</td>
+    <td>J’aime l’herbe&nbsp;!&nbsp;!</td>
+    <td>I like grass.</td>
+  </tr>
+  <tr>
+    <td>Chhhhh&nbsp;?</td>
+    <td>Idiot.</td>
+    <td>I love you.</td>
+  </tr>
+  </table>
+</section>
+<section>
+<h3 style="text-transform:none;">Frizngård vivra sur...</h3>
+Wikipédia&nbsp;Facebook&nbsp;Twitter
+</section>
+<section>
+<h2  style="text-transform:none;">Question</h2>
+<i>Les «&nbsp;ajouts&nbsp;» numériques, font-ils partie d'une œuvre&nbsp;?</i>
+</section>
+</section>
+
+
+
 <section>
 <section>
 <h3 style="text-transform:none;">Partie № 3 </h3>
@@ -336,6 +596,104 @@ commandments<h3>
 </section>
 
 				
+
+
+<section>
+<section>
+<i>				Comment la musique classique
+					s’articule-t-elle
+					aux	nouvelles	expressions
+					musicales	et	aux
+					autres	pratiques
+					artistiques&nbsp;?
+</i>
+<h2 style="text-transform:none;">OVERTIME</h2>
+ <iframe
+     src="http://www.youtube.com/embed/OgWdV5Fooc8?version=3&amp;color=white&amp;fs=1&amp;modestbranding=1&amp;theme=light&amp;hd=1&amp;wmode=transparent"
+           width="840" height="510" title="relou la fille"
+                   frameborder="0" allowfullscreen></iframe>
+</section>
+<section>
+Un <i>glitch</i> est un petit problème survenant dans le circuit
+électronique d'un ordinateur provoquant sa défaillance. On parle également
+de glitch dans l'univers des jeux vidéos lorsqu'un bug apparaît, par exemple
+la disparation d'un objet ou d'un personnage. (L'internaute)
+</section>
+<section>
+<h2 style="text-transform:none;">un ensemble qui glitch</h2>
+ <iframe
+     src="http://www.youtube.com/embed/n442pJ1tDMI?version=3&amp;color=white&amp;fs=1&amp;modestbranding=1&amp;theme=light&amp;hd=1&amp;wmode=transparent"
+           width="840" height="510" title="relou la fille"
+                   frameborder="0" allowfullscreen></iframe>
+
+</section>
+<section>
+<p><i>Ce spectacle est affligeant.</i></p>
+<p><i>Si vous voulez entendre des bruits d'animaux et des chants qui donnent
+la migraine en continu allez voir cette pièce.</i></p>
+<p><i>Drôle, étrange et loufoque. On rentre dans une bulle de folie enivrante,
+un royaume loin, loin des conventions.</i></p>
+<p><i> Une histoire complètement déjantée et surprenante, dans un univers
+surréaliste et émouvant.</i></p>
+<p><i>Ça sort des sentiers battus, ça nous donne à voir et à entendre une
+oeuvre de "théâtre musical" absolument originale. </i></p>
+</section>
+<section>
+<h2  style="text-transform:none;">Question</h2>
+<i>La balise «&nbsp;classique contemporaine&nbsp;», nous dessert-elle plus
+qu'autre chose&nbsp;?</i>
+</section>
+</section>
+
+<section>
+<section>
+<i>				Comment la musique classique
+					s’articule-t-elle
+					aux	nouvelles	expressions
+					musicales	et	aux
+					autres	pratiques
+					artistiques&nbsp;?
+</i>
+<h2 style="text-transform:none;">norman (age 43) drops the ten
+commandments</h2>
+</section>
+<section>
+<h2 style="text-transform:none;">
+et qu'ils peuplent en abondance la terre
+</h2>
+<iframe width="100%" height="450" scrolling="no" frameborder="no"
+src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/103089895&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+</section>
+<section>
+<h2 style="text-transform:none;">
+<a href="http://36h-saint-eustache.com/">36 heures de Saint-Eustache</a>
+</h2>
+</section>
+<section>
+<h2  style="text-transform:none;">Question</h2>
+<i>La musique classique contemporaine, est-elle en train d'être remplacée par
+une musique tout simplement expérimentale&nbsp;?</i>
+
+</section>
+</section>
+
+				<section>
+					<h2>glitcher le chant</h2>
+					<h4>une ode numérique à la voix
+					cassée</h4>
+					<p><a
+					href="http://www.mikesolomon.org/CMC2015">mikesolomon.org/CMC2015</a></p>
+					<p>
+						<small><a
+						href="http://www.mikesolomon.org">Mike
+						Solomon</a> / <a
+						href="http://www.ensemble101.fr">www.ensemble101.fr</a> / <a
+						href="mailto:mike@mikesolomon.org">mike@mikesolomon.org</a></small>
+					</p>
+					<img style="border:none;box-shadow:none;"
+	width="300px"
+		src="img/120729_ensemble101_A_home.psd-logo_small.png" alt="none" />
+				</section>
 
 
 				
